--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ anyio==3.6.2
 certifi==2023.5.7
 click==8.1.3
 dnspython==2.3.0
+email-validator==2.0.0.post2
 fastapi==0.95.2
 h11==0.14.0
 httpcore==0.17.1
@@ -24,4 +25,3 @@ uvicorn==0.22.0
 uvloop==0.17.0
 watchfiles==0.19.0
 websockets==11.0.3
-gunicorn==20.1.0
