--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ PyYAML==6.0
 sniffio==1.3.0
 starlette==0.27.0
 typing_extensions==4.5.0
+sqlalchemy
 ujson==5.7.0
 uvicorn==0.22.0
 uvloop==0.17.0
